// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`chain '' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'this'",
    "a digit",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`chain 'thisthat' conditional success tests AST to match snapshot 1`] = `"that"`;

exports[`chain '1bar' conditional success tests AST to match snapshot 1`] = `"bar"`;

exports[`chain 'thisbar' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'that'",
  ],
  "pos": {
    "column": 5,
    "index": 4,
    "line": 1,
  },
}
`;

exports[`chain '1that' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'bar'",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`chain 'this' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'that'",
  ],
  "pos": {
    "column": 5,
    "index": 4,
    "line": 1,
  },
}
`;

exports[`chain '1' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'bar'",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`chain 'thatthis' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'this'",
    "a digit",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`chain 'foo' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'this'",
    "a digit",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;
